plang/testing/logs/false-incorrect/115/program115.p.p
sVa36 (LG2) HJh.
zW9L u.
hWv7z (G) (o) (ie (YZp2)) jyFW :- ((z0Qj (nlDQ elU f), xmb2 (Q) b2nD (xOPq D), eH42 NSKZZ (bmWa J) (CK0l), lADaR X (DQ4) (iHX); udMOW)).

zPb00 V (t g98 JO zjUl) (i2y (Fdp) (g uaO)) XXC :- ((ss hfyy (qG aHBbV) (xn6d (hnRu (HBD35) (w rF Tv (O)) AL87 (d2pt (Va6J))) ze (mclc3 qg)) kNHEo)); us (t (Ezh2)); (uV); (s8 (zPr) paDxL, wFicW S5m), a zpZ9o; zlacP (V) J8wa, rKiWJ (U06) Ehah6 (q OX YVqT (NapAH)) (kVf7z (v0TDI (DQXwg) (WQOK)) (fu (xcn (sHy (RKN) svY) (s (AiBY)) AQxUD (nqBwe l2v))) Ia); ((u (de c Jy6) e; usxAy xsh (xHh tnZI6 Dt (VOK)) (kfdb (ZoipG)))).


o (l3T (TXaw) ssa45 Ooo) x2P :- f dTok USbL (RP) (QVc).
? coWl GZ.
